--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ body{
     background-image: url('img/background.png');
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: 100vmax 100vmax;
+    background-size: 100% 100%;
     background-position: center;
 }
 
