--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ body{
         background-image: url('img/background/bg-lavender-390.png');
         background-attachment: fixed;
         background-repeat: no-repeat;
-        background-size: 100% 100%;
+        background-size: 100vw 100vh;
         background-position: center;
     }
 }
