--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,13 @@ body{
     margin: 0;
 }
 
+@media (max-width: 480px){
+    body{
+        width: 100vw;
+        height: 100vh;
+    }
+}
+
 #body-background-lavender{
     background-color: #191010;
     background-image: url('img/background/bg-lavender-1920.png');
@@ -39,7 +46,7 @@ body{
         background-image: url('img/background/bg-lavender-390.png');
         background-attachment: fixed;
         background-repeat: no-repeat;
-        background-size: 100vw 100vh;
+        background-size: 100% 100%;
         background-position: center;
     }
 }
