--- a/css/styles.css
+++ b/css/styles.css
@@ -41,8 +41,9 @@ body{
         background-image: url('img/background/bg-lavender-390.png');
         background-attachment: fixed;
         background-repeat: no-repeat;
-        background-size: cover;
-        -webkit-background-size: cover;
+        background-size: 100% 100%;
+        -webkit-background-size: 100% 100%;
+        width: 100%;
         background-position: center;
     }
 }
