--- a/css/styles.css
+++ b/css/styles.css
@@ -37,14 +37,15 @@ body{
 
 @media (max-width: 480px){
     #body-background-lavender{
+        width: 100%;
+        height: 100%;
         background-color: #191010;
         background-image: url('img/background/bg-lavender-390.png');
         background-attachment: fixed;
         background-repeat: no-repeat;
+        background-position: center;
         background-size: 100% 100%;
         -webkit-background-size: 100% 100%;
-        width: 100%;
-        background-position: center;
     }
 }
 
