--- a/css/styles.css
+++ b/css/styles.css
@@ -18,9 +18,12 @@ body{
     background-image: url('img/background/bg-lavender-1920.png');
     background-attachment: fixed;
     background-repeat: no-repeat;
-        background-size: cover;
-        -webkit-background-size: cover;
     background-position: center;
+    
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 @media (max-width: 768px){
@@ -29,9 +32,13 @@ body{
         background-image: url('img/background/bg-lavender-768.png');
         background-attachment: fixed;
         background-repeat: no-repeat;
-        background-size: cover;
-        -webkit-background-size: cover;
         background-position: center;
+        
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        
     }
 }
 
@@ -41,11 +48,14 @@ body{
         height: 100%;
         background-color: #191010;
         background-image: url('img/background/bg-lavender-390.png');
-        background-attachment: fixed;
+        background-attachment: scroll;
         background-repeat: no-repeat;
         background-position: center;
-        background-size: 100% 100%;
-        -webkit-background-size: 100% 100%;
+        
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
     }
 }
 
