--- a/css/styles.css
+++ b/css/styles.css
@@ -19,11 +19,8 @@ body{
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center;
-    
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+
+    background-size: 100% 100%;
 }
 
 @media (max-width: 768px){
@@ -33,29 +30,20 @@ body{
         background-attachment: fixed;
         background-repeat: no-repeat;
         background-position: center;
-        
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-        
+
+        background-size: 100% 100%;
     }
 }
 
 @media (max-width: 480px){
     #body-background-lavender{
-        width: 100%;
-        height: 100%;
         background-color: #191010;
         background-image: url('img/background/bg-lavender-390.png');
         background-attachment: scroll;
         background-repeat: no-repeat;
         background-position: center;
-        
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
+
+        background-size: 100% 100%;
     }
 }
 
