--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ body{
 
 @media (max-width: 768px){
     #body-background-lavender{
-        background-color: #000000;
+        background-color: pink;
         background-image: url('img/background/bg-lavender-768.png');
         background-attachment: fixed;
         background-repeat: no-repeat;
@@ -310,12 +310,6 @@ button{
         height: 95vh;
         display: flex;
         flex-direction: column-reverse;
-
-        background-image: url(img/3d-logo.png);
-        background-size: 140% auto;
-        background-repeat: no-repeat;
-        background-position: top;
-        background-blend-mode: screen;
     } 
 
     #bodybox-headline{
@@ -334,7 +328,7 @@ button{
     }
 }
 
-@media (max-height: 768px){
+@media (max-height: 500px){
     #bodybox-headpage{
         background-image: none;
     }
