--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ body{
 
 @media (max-width: 768px){
     #body-background-lavender{
-        background-color: pink;
+        background-color: #191010;
         background-image: url('img/background/bg-lavender-768.png');
         background-attachment: fixed;
         background-repeat: no-repeat;
@@ -261,14 +261,9 @@ button{
 
 #bodybox-headpage{
     height: 100vh;
+    width: auto;
     display: flex;
     flex-direction: column-reverse;
-
-    background-image: url(img/3d-logo.png);
-    background-size: 100% auto;
-    background-repeat: no-repeat;
-    background-position: top;
-    background-blend-mode: screen;
 }
 
 #bodybox-headline{
@@ -282,6 +277,7 @@ button{
 @media (max-width: 1280px){
     #bodybox-headpage{
         height: 100vh;
+        width: auto;
         display: flex;
         flex-direction: column-reverse;
 
@@ -308,6 +304,7 @@ button{
 @media (max-width: 480px){
     #bodybox-headpage{
         height: 95vh;
+        width: auto;
         display: flex;
         flex-direction: column-reverse;
     } 
@@ -325,12 +322,6 @@ button{
 
     p{
         font-size: 0.875rem;
-    }
-}
-
-@media (max-height: 500px){
-    #bodybox-headpage{
-        background-image: none;
     }
 }
 
