--- a/css/styles.css
+++ b/css/styles.css
@@ -21,17 +21,23 @@ body{
     background-position: center;
 
     background-size: 100% 100%;
+    -webkit-background-size: 100% 100%;
+    -moz-background-size: 100% 100%;
+    -o-background-size: 100% 100%;
 }
 
 @media (max-width: 768px){
     #body-background-lavender{
-        background-color: #191010;
-        background-image: url('img/background/bg-lavender-768.png');
+        background-color: pink;
+        background-image: url('img/background/bg-lavender-390.png');
         background-attachment: fixed;
         background-repeat: no-repeat;
         background-position: center;
 
         background-size: 100% 100%;
+        -webkit-background-size: 100% 100%;
+        -moz-background-size: 100% 100%;
+        -o-background-size: 100% 100%;
     }
 }
 
