--- a/css/styles.css
+++ b/css/styles.css
@@ -28,9 +28,9 @@ body{
 
 @media (max-width: 768px){
     #body-background-lavender{
-        background-color: pink;
+        background-color: #191010;
         background-image: url('img/background/bg-lavender-390.png');
-        background-attachment: fixed;
+        background-attachment: scroll;
         background-repeat: no-repeat;
         background-position: center;
 
