--- a/css/styles.css
+++ b/css/styles.css
@@ -20,24 +20,24 @@ body{
     background-repeat: no-repeat;
     background-position: center;
 
-    background-size: 100% 100%;
-    -webkit-background-size: 100% 100%;
-    -moz-background-size: 100% 100%;
-    -o-background-size: 100% 100%;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
 }
 
 @media (max-width: 768px){
     #body-background-lavender{
         background-color: #191010;
         background-image: url('img/test-image.png');
-        background-attachment: scroll;
+        background-attachment: fixed;
         background-repeat: no-repeat;
         background-position: center;
 
-        background-size: 100% 100%;
-        -webkit-background-size: 100% 100%;
-        -moz-background-size: 100% 100%;
-        -o-background-size: 100% 100%;
+        background-size: 100vw 100vh;
+        -webkit-background-size: 100vw 100vh;
+        -moz-background-size: 100vw 100vh;
+        -o-background-size: 100vw 100vh;
     }
 }
 
