--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ body{
 
 @media (max-width: 768px){
     #body-background-lavender{
-        background-color: #191010;
+        background-color: red;
         background-image: url('img/test-image.png');
         background-attachment: fixed;
         background-repeat: no-repeat;
