--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ body{
         background-image: url('img/test-image.png');
         background-attachment: fixed;
         background-repeat: no-repeat;
-        background-position: center;
+        background-position: top;
 
         background-size: 100vw 100vh;
         -webkit-background-size: 100vw 100vh;
