--- a/css/styles.css
+++ b/css/styles.css
@@ -18,15 +18,30 @@ body{
     background-image: url('img/background/bg-lavender-1920.png');
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: top;
 
-    background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    background-size: 100vw 100vh;
+    -webkit-background-size: 100vw 100vh;
+    -moz-background-size: 100vw 100vh;
+    -o-background-size: 100vw 100vh;
 }
 
 @media (max-width: 768px){
+    #body-background-lavender{
+        background-color: #191010;
+        background-image: url('img/background/bg-lavender-768.png');
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-position: top;
+
+        background-size: 100vw 100vh;
+        -webkit-background-size: 100vw 100vh;
+        -moz-background-size: 100vw 100vh;
+        -o-background-size: 100vw 100vh;
+    }
+}
+
+@media (max-width: 480px){
     #body-background-lavender{
         background-color: #191010;
         background-image: url('img/background/bg-lavender-390.png');
