--- a/css/styles.css
+++ b/css/styles.css
@@ -305,7 +305,7 @@ button{
 
     #bodybox-headline{
         width: auto;
-        margin: 0 3rem 5rem 2rem;
+        padding: 0 3rem 5rem 2rem;
         display: flex;
         flex-direction: column;
         gap: 1.5rem;
