--- a/css/styles.css
+++ b/css/styles.css
@@ -289,7 +289,7 @@ button{
 
 #bodybox-headline{
     width: 50%;
-    margin: 0 0 5rem 2rem;
+    padding: 0 0 5rem 2rem;
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
