--- a/css/styles.css
+++ b/css/styles.css
@@ -485,6 +485,10 @@ button{
         background-repeat: no-repeat;
         background-size: 100% 100%;
     }
+
+    h2{
+        font-size: 2rem;
+    }
 }
 
 /* Gallery */
