--- a/css/styles.css
+++ b/css/styles.css
@@ -20,10 +20,10 @@ body{
     background-repeat: no-repeat;
     background-position: top;
 
-    -webkit-background-size: 100vw 105vh;
-    -moz-background-size: 100vw 105vh;
-    -o-background-size: 100vw 105vh;
-    background-size: 100vw 105vh;
+    -webkit-background-size: 100vw 100vh;
+    -moz-background-size: 100vw 100vh;
+    -o-background-size: 100vw 100vh;
+    background-size: 100vw 100vh;
 }
 
 @media (max-width: 768px){
@@ -34,10 +34,10 @@ body{
         background-repeat: no-repeat;
         background-position: top;
 
-        -webkit-background-size: 100vw 105vh;
-        -moz-background-size: 100vw 105vh;
-        -o-background-size: 100vw 105vh;
-        background-size: 100vw 105vh;
+        -webkit-background-size: 100vw 100vh;
+        -moz-background-size: 100vw 100vh;
+        -o-background-size: 100vw 100vh;
+        background-size: 100vw 100vh;
     }
 }
 
@@ -49,10 +49,10 @@ body{
         background-repeat: no-repeat;
         background-position: top;
 
-        -webkit-background-size: 100vw 105vh;
-        -moz-background-size: 100vw 105vh;
-        -o-background-size: 100vw 105vh;
-        background-size: 100vw 105vh;
+        -webkit-background-size: 100vw 100vh;
+        -moz-background-size: 100vw 100vh;
+        -o-background-size: 100vw 100vh;
+        background-size: 100vw 100vh;
     }
 }
 
@@ -158,7 +158,7 @@ button{
 }
 
 .font-color-white{
-    color: ##FFF3F3;
+    color: #FFF3F3;
 }
 
 .font-color-mauve100{
@@ -385,8 +385,8 @@ button{
 
 /* Works */
 #bodybox-works{
-    background-color: #251919;
-    padding: 4rem;
+    background-color: #191010;
+    padding: 3rem 0;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -421,7 +421,7 @@ button{
         height: 40rem;
 
         padding: 3rem 2rem;
-        border: 2px solid #251919;
+        border: 2px solid #191010;
         border-radius: 1.5rem;
     
         display: flex;
@@ -450,7 +450,7 @@ button{
         height: 25rem;
 
         padding: 2rem 2rem;
-        border: 2px solid #251919;
+        border: 2px solid #191010;
         border-radius: 1.5rem;
     
         display: flex;
@@ -475,7 +475,7 @@ button{
         height: 25rem;
 
         padding: 2rem 2rem;
-        border: 2px solid #251919;
+        border: 2px solid #191010;
         border-radius: 1.5rem;
     
         display: flex;
@@ -494,7 +494,7 @@ button{
         height: 20rem;
 
         padding: 2rem 2rem;
-        border: 2px solid #251919;
+        border: 2px solid #191010;
         border-radius: 1.5rem;
     
         display: flex;
@@ -620,34 +620,6 @@ button{
     object-fit: cover;
 }
 
-@media (min-width: 1920px){
-    #bodybox-project{
-        padding: 4rem 8rem;
-        display: grid;
-        grid-template-columns: 1fr 2fr;
-        gap: 4rem;
-    }
-
-    .project-summary-box{
-        display: flex;
-        flex-direction: column;
-        gap: 1.5rem;
-    }
-
-    .project-summary{
-        font-size: 1.125rem;
-    }
-
-
-    .project-image-box{
-        background-color: #191010;
-        padding: 4rem 8rem;
-        display: flex;
-        flex-direction: column;
-        gap: 0.5rem;
-    }
-}
-
 @media (max-width: 1920px){
     #bodybox-project{
         padding: 4rem 6rem;
@@ -684,11 +656,11 @@ button{
     }
 
     #project-title{
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
 
     .project-details{
-        font-size: 1.5rem;
+        font-size: 1.25rem;
     }
 
     .project-summary-box{
@@ -714,44 +686,8 @@ button{
     #bodybox-project{
         padding: 2rem 2rem;
         display: grid;
-        grid-template-columns: auto;
-        grid-template-rows: 1fr;
-        gap: 2rem;
-    }
-
-    #project-title{
-        font-size: 2rem;
-    }
-
-    .project-details{
-        font-size: 1.5rem;
-    }
-
-    .project-summary-box{
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-    }
-
-    .project-summary{
-        font-size: 1rem;
-    }
-
-    .project-image-box{
-        background-color: #191010;
-        padding: 2rem 2rem;
-        display: flex;
-        flex-direction: column;
-        gap: 0.5rem;
-    }
-}
-
-@media (max-width: 480px){
-    #bodybox-project{
-        padding: 2rem 1rem;
-        display: grid;
-        grid-template-columns: auto;
-        grid-template-rows: 1fr;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
         gap: 2rem;
     }
 
@@ -770,7 +706,43 @@ button{
     }
 
     .project-summary{
-        font-size: 1rem;
+        font-size: 0.875rem;
+    }
+
+    .project-image-box{
+        background-color: #191010;
+        padding: 2rem 2rem;
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+}
+
+@media (max-width: 480px){
+    #bodybox-project{
+        padding: 2rem 1rem;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        gap: 2rem;
+    }
+
+    #project-title{
+        font-size: 1.25rem;
+    }
+
+    .project-details{
+        font-size: 1.125rem;
+    }
+
+    .project-summary-box{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .project-summary{
+        font-size: 0.875rem;
     }
 
     .project-image-box{
