--- a/css/styles.css
+++ b/css/styles.css
@@ -785,3 +785,34 @@ button{
         display: inline;
     }
 }
+
+
+@media (max-width: 768px){
+    .footer{
+        background-color: #191010;
+        background-image: url('img/background/bg-lavender-768.png');
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-position: bottom;
+
+        -webkit-background-size: 100vw 100vh;
+        -moz-background-size: 100vw 100vh;
+        -o-background-size: 100vw 100vh;
+        background-size: 100vw 100vh;
+    }
+}
+
+@media (max-width: 480px){
+    .footer{
+        background-color: #191010;
+        background-image: url('img/background/bg-lavender-390.png');
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-position: bottom;
+
+        -webkit-background-size: 100vw 100vh;
+        -moz-background-size: 100vw 100vh;
+        -o-background-size: 100vw 100vh;
+        background-size: 100vw 100vh;
+    }
+}
