--- a/css/styles.css
+++ b/css/styles.css
@@ -791,7 +791,7 @@ button{
     .footer{
         background-color: #191010;
         background-image: url('img/background/bg-lavender-768.png');
-        background-attachment: fixed;
+        background-attachment: scroll;
         background-repeat: no-repeat;
         background-position: bottom;
 
@@ -806,7 +806,7 @@ button{
     .footer{
         background-color: #191010;
         background-image: url('img/background/bg-lavender-390.png');
-        background-attachment: fixed;
+        background-attachment: scroll;
         background-repeat: no-repeat;
         background-position: bottom;
 
