--- a/css/styles.css
+++ b/css/styles.css
@@ -786,27 +786,17 @@ button{
     }
 }
 
-
 @media (max-width: 768px){
-    .footer{
-        background-color: #191010;
-        background-image: url('img/background/bg-lavender-768.png');
-        background-attachment: scroll;
-        background-repeat: no-repeat;
-        background-position: bottom;
-
-        -webkit-background-size: 100vw 100vh;
-        -moz-background-size: 100vw 100vh;
-        -o-background-size: 100vw 100vh;
-        background-size: 100vw 100vh;
+    #testing{
+        background-color: red;
     }
 }
 
 @media (max-width: 480px){
-    .footer{
+    #testing{
         background-color: #191010;
         background-image: url('img/background/bg-lavender-390.png');
-        background-attachment: scroll;
+        background-attachment: fixed;
         background-repeat: no-repeat;
         background-position: bottom;
 
