--- a/css/styles.css
+++ b/css/styles.css
@@ -775,7 +775,7 @@ button{
 }
 
 /* Footer */
-.footer{
+#footer{
     text-align: center;
     padding: 1rem 0 1.5rem;
 }
@@ -786,14 +786,36 @@ button{
     }
 }
 
+#bottom-background{
+    background-color: #191010;
+    background-image: url('img/background/bg-lavender-1920.png');
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: bottom;
+
+    -webkit-background-size: 100vw 100vh;
+    -moz-background-size: 100vw 100vh;
+    -o-background-size: 100vw 100vh;
+    background-size: 100vw 100vh;
+}
+
 @media (max-width: 768px){
-    #testing{
-        background-color: red;
+    #bottom-background{
+        background-color: #191010;
+        background-image: url('img/background/bg-lavender-768.png');
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-position: bottom;
+
+        -webkit-background-size: 100vw 100vh;
+        -moz-background-size: 100vw 100vh;
+        -o-background-size: 100vw 100vh;
+        background-size: 100vw 100vh;
     }
 }
 
 @media (max-width: 480px){
-    #testing{
+    #bottom-background{
         background-color: #191010;
         background-image: url('img/background/bg-lavender-390.png');
         background-attachment: fixed;
