--- a/css/styles.css
+++ b/css/styles.css
@@ -754,16 +754,32 @@ button{
     }
 }
 
-#next-project-box{
-    margin: 2rem 0 0;
-    padding: 4rem 0;
-    background-color: rgba(255, 243, 243, 0.05);
+@media (min-width: 768px){
+    #next-project-box{
+        margin: 2rem 0 0;
+        padding: 4rem 0;
+        background-color: rgba(255, 243, 243, 0.05);
+    
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    
+        gap: 1rem;
+    }
+}
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    gap: 1rem;
+@media (max-width: 768px){
+    #next-project-box{
+        margin: 2rem 0 0;
+        padding: 4rem 0;
+        background-color: rgba(255, 243, 243, 0.05);
+    
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    
+        gap: 1rem;
+    }
 }
 
 #next-project-box:hover{
