--- a/css/styles.css
+++ b/css/styles.css
@@ -754,9 +754,7 @@ button{
     }
 }
 
-@media (min-width: 768px){
     #next-project-box{
-        margin: 2rem 0 0;
         padding: 4rem 0;
         background-color: rgba(255, 243, 243, 0.05);
     
@@ -766,21 +764,6 @@ button{
     
         gap: 1rem;
     }
-}
-
-@media (max-width: 768px){
-    #next-project-box{
-        margin: 2rem 0 0;
-        padding: 4rem 0;
-        background-color: rgba(255, 243, 243, 0.05);
-    
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    
-        gap: 1rem;
-    }
-}
 
 #next-project-box:hover{
     background-color: rgba(255, 243, 243, 0.1);
@@ -803,6 +786,8 @@ button{
 }
 
 .bottom-background{
+    padding: 2rem 0 0;
+
     background-color: #191010;
     background-image: url('img/background/bg-lavender-1920.png');
     background-attachment: fixed;
@@ -817,6 +802,8 @@ button{
 
 @media (max-width: 768px){
     .bottom-background{
+        padding: 2rem 0 0;
+
         background-color: #191010;
         background-image: url('img/background/bg-lavender-768.png');
         background-attachment: fixed;
@@ -832,6 +819,8 @@ button{
 
 @media (max-width: 480px){
     .bottom-background{
+        padding: 2rem 0 0;
+        
         background-color: #191010;
         background-image: url('img/background/bg-lavender-390.png');
         background-attachment: fixed;
