--- a/css/styles.css
+++ b/css/styles.css
@@ -792,7 +792,7 @@ button{
     background-image: url('img/background/bg-lavender-1920.png');
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-position: bottom;
+    background-position: center;
 
     -webkit-background-size: 100vw 100vh;
     -moz-background-size: 100vw 100vh;
@@ -808,7 +808,7 @@ button{
         background-image: url('img/background/bg-lavender-768.png');
         background-attachment: fixed;
         background-repeat: no-repeat;
-        background-position: bottom;
+        background-position: center;
 
         -webkit-background-size: 100vw 100vh;
         -moz-background-size: 100vw 100vh;
@@ -820,12 +820,12 @@ button{
 @media (max-width: 480px){
     .bottom-background{
         padding: 2rem 0 0;
-        
+
         background-color: #191010;
         background-image: url('img/background/bg-lavender-390.png');
         background-attachment: fixed;
         background-repeat: no-repeat;
-        background-position: bottom;
+        background-position: center;
 
         -webkit-background-size: 100vw 100vh;
         -moz-background-size: 100vw 100vh;
