--- a/css/styles.css
+++ b/css/styles.css
@@ -46,8 +46,13 @@ body{
         background-color: #191010;
         background-image: url('img/background/bg-lavender-390.png');
         background-attachment: fixed;
-        background-repeat: repeat-y;
+        background-repeat: no-repeat;
         background-position: top;
+
+        -webkit-backface-visibility: hidden;
+        -moz-backface-visibility: hidden;
+        -o-backface-visibility: hidden;
+        backface-visibility: hidden;
 
         -webkit-background-size: 100vw 100vh;
         -moz-background-size: 100vw 100vh;
