--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ body{
 
 @media (max-width: 480px){
     #body-background-lavender{
-        background-color: #191010;
+        background-color: green;
         background-image: url('img/background/bg-lavender-390.png');
         background-attachment: fixed;
         background-repeat: no-repeat;
