--- a/css/styles.css
+++ b/css/styles.css
@@ -43,16 +43,11 @@ body{
 
 @media (max-width: 480px){
     #body-background-lavender{
-        background-color: green;
+        background-color: #191010;
         background-image: url('img/background/bg-lavender-390.png');
         background-attachment: fixed;
         background-repeat: no-repeat;
         background-position: top;
-
-        -webkit-backface-visibility: hidden;
-        -moz-backface-visibility: hidden;
-        -o-backface-visibility: hidden;
-        backface-visibility: hidden;
 
         -webkit-background-size: 100vw 100vh;
         -moz-background-size: 100vw 100vh;
