--- a/css/styles.css
+++ b/css/styles.css
@@ -516,7 +516,7 @@ button{
 }
 
 #thumbnail-aurigami-brand{
-    background-image: url(img/thumbnail/test-1200.png);
+    background-image: url(img/thumbnail/1200-72dpi.png);
 }
 
 #thumbnail-souldust{
