--- a/css/styles.css
+++ b/css/styles.css
@@ -543,7 +543,7 @@ button{
     background-image: url(img/thumbnail/thumbnail-aurigami-mascot.png);
 }
 
-#thumbnail-house{
+#thumbnail-zhen{
     background-image: url(img/thumbnail/thumbnail-zhen.png);
 }
 
